# music-master

./: .gitignore  README.md  start_servers.sh  stop_servers.sh
backend/: README.md  pyproject.toml  requirements-ml.txt  requirements.txt
backend/app/: main.py  models.py
backend/app/data/: guitar_lessons.py
backend/app/services/: audio_analysis.py  lesson_service.py  music_theory.py  play_along.py  source_separation.py
backend/tests/: test_audio_analysis.py  test_curriculum.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChordPracticeSection.tsx  LessonsSection.tsx  SourceSeparationSection.tsx  ThemeToggle.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  select.tsx
frontend/lib/: api.ts
frontend/types/: music.ts
