[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi==0.115.2",
	"uvicorn[standard]==0.32.0",
	"python-multipart==0.0.12",
	"numpy==2.1.2",
	"scipy==1.14.1",
	"librosa==0.10.2.post1",
	"soundfile==0.12.1",
	"music21==9.3.0",
	"pydantic==2.9.2"
]

[project.optional-dependencies]
ml = [
	"demucs==4.0.1",
]
dev = [
	"pytest==8.3.3",
	"httpx==0.27.2",
	"taskipy==1.14.1",
]

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload --port 8000"
test = "pytest"
test_verbose = "pytest -vv"
